--- a/roman-numeral-converter/public/index.html
+++ b/roman-numeral-converter/public/index.html
@@ -1,14 +1,14 @@
 <html>
     <head>
-  
+        <title>Roman numeral converter</title>
     </head>
     <body>
         <h1>Roman numeral converter</h1>
         <div>Enter a num: </div>
-        <input id="num" type="text"/>
+        <input id="num" type="text" />
         <button onclick="app()">enter</button>
         <div>Roman form: </div>
         <div id="romanNum"></div>
-        <script src="/src/index.js"></script>
+        <script src="/roman-numeral-converter/src/index.js"></script>
     </body>
 </html>
