impossible rush added

--- a/impossible-rush/public/index.html
+++ b/impossible-rush/public/index.html
@@ -2,6 +2,7 @@
     <head>
         <link rel="stylesheet" href="/impossible-rush/src/style.css">
         <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+        <title>impossible rush</title>
     </head>
     <body>
         <div id="game-area">
