--- a/roman-numeral-converter/public/index.html
+++ b/roman-numeral-converter/public/index.html
@@ -1,14 +1,35 @@
 <html>
     <head>
-        <title>Roman numeral converter</title>
+        <title>Number System converter</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+        <link rel="stylesheet" href="/roman-numeral-converter/src/style.css">
     </head>
     <body>
-        <h1>Roman numeral converter</h1>
-        <div>Enter a num: </div>
-        <input id="num" type="text" />
-        <button onclick="app()">enter</button>
-        <div>Roman form: </div>
-        <div id="romanNum"></div>
-        <script src="/roman-numeral-converter/src/index.js"></script>
+        <h1>Number system converter</h1>
+        <div class="main-container">
+            <div id="box1"> 
+                <select name="number1" id="num1">
+                    <option value="decimal">Decimal</option>
+                    <option value="roman">Roman</option>
+                    <option value="binary">binary</option>
+                </select>
+            <input type="text" placeholder="Type number here...." id="input">
+        </div>
+
+        <button id="enter" class="btn btn-dark">Go -></button>
+
+            <div id="box2">
+                <select name="number2" id="num2">
+                    <option value="roman">Roman</option>
+                    <option value="binary">binary</option>
+                    <option value="decimal">Decimal</option>
+                </select>
+                <div id="ans">...ans....</div>
+            </div>
+         
+        </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
+        <script type="module" src="/roman-numeral-converter/src/index.js"></script>
+        
     </body>
 </html>
